--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.1",
     "sqlite3": "^5.1.7"
   }
 }
+
